Bug 436513 - kopete crashed on exit
Summary: kopete crashed on exit
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords: drkonqi
: 393662 393807 400283 401181 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-03 05:12 UTC by Mathias Homann
Modified: 2021-12-21 12:45 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.65 KB, text/plain)
2021-05-03 05:21 UTC, Mathias Homann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mathias Homann 2021-05-03 05:12:33 UTC
Application: kopete (1.13.0)

Qt Version: 5.15.2
Frameworks Version: 5.81.0
Operating System: Linux 5.3.18-lp152.72-preempt x86_64
Windowing System: X11
Drkonqi Version: 5.21.4
Distribution: "openSUSE Leap 15.2"

-- Information about the crash:
- What I was doing when the application crashed:

kopete crashed on exit.

on stdout i had literally hundreds of lines like this:
QFSFileEngine::open: No file name specified

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault

[KCrash Handler]
#4  KHTMLPart::begin(QUrl const&, int, int) (this=this@entry=0x5577f82a9320, url=..., xOffset=xOffset@entry=0, yOffset=yOffset@entry=0) at /usr/src/debug/khtml-5.81.0-lp152.218.1.x86_64/src/khtml_part.cpp:2074
#5  0x00007fe44789f037 in ChatMessagePart::writeTemplate() (this=this@entry=0x5577f82a9320) at /usr/src/debug/kopete-21.04.0-lp152.2.4.x86_64/kopete/chatwindow/chatmessagepart.cpp:1291
#6  0x00007fe4478a68ad in ChatMessagePart::changeStyle() (this=0x5577f82a9320) at /usr/src/debug/kopete-21.04.0-lp152.2.4.x86_64/kopete/chatwindow/chatmessagepart.cpp:1269
#7  0x00007fe44789b185 in ChatMessagePart::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kopete-21.04.0-lp152.2.4.x86_64/build/kopete/chatwindow/kopetechatwindow_shared_autogen/EWIEGA46WW/moc_chatmessagepart.cpp:238
#8  0x00007fe47676f63b in QObject::event(QEvent*) (this=0x5577f82a9320, e=0x5577f825c990) at kernel/qobject.cpp:1314
#9  0x00007fe4776e037c in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=0x5577f6344be0, receiver=receiver@entry=0x5577f82a9320, e=e@entry=0x5577f825c990) at kernel/qapplication.cpp:3632
#10 0x00007fe4776e7170 in QApplication::notify(QObject*, QEvent*) (this=0x7fff3c103f20, receiver=0x5577f82a9320, e=0x5577f825c990) at kernel/qapplication.cpp:3156
#11 0x00007fe47673b443 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x5577f82a9320, event=0x5577f825c990) at kernel/qcoreapplication.cpp:1063
#12 0x00007fe47673b61e in QCoreApplication::sendEvent(QObject*, QEvent*) (receiver=receiver@entry=0x5577f82a9320, event=event@entry=0x5577f825c990) at kernel/qcoreapplication.cpp:1458
#13 0x00007fe47673de61 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x5577f631b0d0) at kernel/qcoreapplication.cpp:1817
#14 0x00007fe47673e3e8 in QCoreApplication::sendPostedEvents(QObject*, int) (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1676
#15 0x00007fe47679e523 in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=0x5577f6486940) at kernel/qeventdispatcher_glib.cpp:277
#16 0x00007fe46e000624 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#17 0x00007fe46e0009c0 in  () at /usr/lib64/libglib-2.0.so.0
#18 0x00007fe46e000a4c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#19 0x00007fe47679dbcc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x5577f6495520, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#20 0x00007fe476739cca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fff3c103e40, flags=..., flags@entry=...) at kernel/qeventloop.cpp:232
#21 0x00007fe4767434c7 in QCoreApplication::exec() () at kernel/qcoreapplication.cpp:1371
#22 0x00005577f439299b in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kopete-21.04.0-lp152.2.4.x86_64/kopete/main.cpp:121
[Inferior 1 (process 8864) detached]

The reporter indicates this bug may be a duplicate of or related to bug 393807.

Possible duplicates by query: bug 409464, bug 401181, bug 400283, bug 393807, bug 393662.

Reported using DrKonqi
Comment 1 Mathias Homann 2021-05-03 05:21:27 UTC
Created attachment 138106 [details]
New crash information added by DrKonqi

kopete (1.13.0) using Qt 5.15.2

- What I was doing when the application crashed:

again, crash on exit.


there is no additional iformation to be added.

-- Backtrace (Reduced):
#4  KHTMLPart::begin(QUrl const&, int, int) (this=this@entry=0x557e2be9af40, url=..., xOffset=xOffset@entry=0, yOffset=yOffset@entry=0) at /usr/src/debug/khtml-5.81.0-lp152.218.1.x86_64/src/khtml_part.cpp:2074
#5  0x00007f47aee2b037 in ChatMessagePart::writeTemplate() (this=this@entry=0x557e2be9af40) at /usr/src/debug/kopete-21.04.0-lp152.2.4.x86_64/kopete/chatwindow/chatmessagepart.cpp:1291
#6  0x00007f47aee328ad in ChatMessagePart::changeStyle() (this=0x557e2be9af40) at /usr/src/debug/kopete-21.04.0-lp152.2.4.x86_64/kopete/chatwindow/chatmessagepart.cpp:1269
#7  0x00007f47aee27185 in ChatMessagePart::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kopete-21.04.0-lp152.2.4.x86_64/build/kopete/chatwindow/kopetechatwindow_shared_autogen/EWIEGA46WW/moc_chatmessagepart.cpp:238
#8  0x00007f47ddbaf63b in QObject::event(QEvent*) (this=0x557e2be9af40, e=0x557e2c152500) at kernel/qobject.cpp:1314
Comment 2 Oleg Solovyov 2021-09-30 12:44:02 UTC
Same happens with me. Kopete 21.08.1
Comment 3 Oleg Solovyov 2021-09-30 14:17:51 UTC
Made some investigation:

d->m_view is null
Comment 4 Oleg Solovyov 2021-10-01 11:45:15 UTC
We have use-after-free:
KHTMLView::~KHTMLView() is caused by KopeteWindow::~KopeteWindow()
Comment 5 Bug Janitor Service 2021-10-01 13:23:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kopete/-/merge_requests/1
Comment 6 Oleg Solovyov 2021-10-01 15:20:45 UTC
Git commit d7c8d986d3c5e955749f14bb35e551ee86583639 by Oleg Solovyov.
Committed on 01/10/2021 at 13:19.
Pushed by aacid into branch 'master'.

ChatMessagePart: return if view() is nullptr

M  +4    -0    kopete/chatwindow/chatmessagepart.cpp

https://invent.kde.org/network/kopete/commit/d7c8d986d3c5e955749f14bb35e551ee86583639
Comment 7 Wolfgang Bauer 2021-12-21 12:42:01 UTC
*** Bug 401181 has been marked as a duplicate of this bug. ***
Comment 8 Wolfgang Bauer 2021-12-21 12:43:10 UTC
*** Bug 393662 has been marked as a duplicate of this bug. ***
Comment 9 Wolfgang Bauer 2021-12-21 12:44:10 UTC
*** Bug 400283 has been marked as a duplicate of this bug. ***
Comment 10 Wolfgang Bauer 2021-12-21 12:45:06 UTC
*** Bug 393807 has been marked as a duplicate of this bug. ***