ChatMessagePart: return if view() is nullptr

BUG: 436513